fix actions buttons alignment

--- a/themes/default/static/css/less/components/tables.less
+++ b/themes/default/static/css/less/components/tables.less
@@ -10,7 +10,7 @@
     > td {
       vertical-align: middle;
       &.actions {
-        text-align: center;
+        text-align: left;
         width: 92px;
       }
     }
